applications/keycloak/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-staging
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: keycloak.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: keycloak.decort.tech
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: keycloak-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route-redirect
  namespace: keycloak
spec:
  parentRefs:
    - name: keycloak-gateway
      namespace: keycloak
      sectionName: http
  hostnames:
    - "keycloak.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: keycloak-gateway
      namespace: keycloak
      sectionName: https
  hostnames:
    - "keycloak.decort.tech"
  rules:
    - backendRefs:
        - name: keycloak-dct-service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
